<resources>
    <string name="app_name">DIGIcerto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pagína Ínicial</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registers">Cadastros</string>

    <string name="text_compartments">Compartimentos</string>
    <string name="text_code">Código</string>
    <string name="text_tank_code">Código tanque</string>
    <string name="text_tank_type">Tipo tanque</string>
    <string name="text_avg_volume">Volume médio</string>
    <string name="text_avg_volume_colon">Volume médio: %1s</string>
    <string name="text_producer_code">Código produtor</string>
    <string name="text_farm_code">Código fazenda</string>
    <string name="text_sequence">Sequência</string>
    <string name="text_plate">Placa</string>
    <string name="text_name">Nome</string>
    <string name="text_occurrence_type_colon">Tipo de ocorrência: %1s</string>
    <string name="text_login">Login</string>
    <string name="text_user">Usuário</string>
    <string name="text_password">Senha</string>
    <string name="text_travel">Viagem</string>
    <string name="text_printer">Impressora</string>
    <string name="text_application">Aplicativo</string>
    <string name="text_web_service">Web Service</string>
    <string name="text_FTP">FTP</string>
    <string name="text_ok">OK</string>
    <string name="text_unauthorized">Não autorizado</string>
    <string name="text_mandatory">Obrigatório</string>
    <string name="text_access_denied">Acesso negado</string>
    <string name="text_failure">Houve uma falha</string>
    <string name="text_success">Tudo certo</string>
    <string name="text_update_registers">Atualizando cadastros</string>
    <string name="text_necessary_action">Ação necessária</string>
    <string name="text_operation_type">Tipo de operação</string>
    <string name="text_register_sample">Registrar amostra</string>
    <string name="text_ignore">Ignorar</string>
    <string name="text_aleatory_code">Código aleatório</string>
    <string name="text_read_barcode">Lêr código de barras</string>
    <string name="text_acid_milk">Leite ácido</string>
    <string name="text_temperature_picture">Foto da temperatura</string>
    <string name="text_avg_production_tolerance">Tolerância do vol. médio de produção</string>
    <string name="text_save">Salvar</string>
    <string name="text_all_right">Tudo certo</string>
    <string name="text_collect">Coleta</string>
    <string name="text_ops">Ops…</string>
    <string name="text_host">Host</string>
    <string name="text_port">Porta</string>
    <string name="text_folder">Pasta</string>
    <string name="text_email">E-mail</string>
    <string name="text_incorrect_email">E-mail incorreto</string>
    <string name="text_read_producer_code">Leitura do código do produtor</string>
    <string name="text_wildcard_producer">Produtor coringa</string>
    <string name="text_transhipment">Transbordo</string>
    <string name="text_await_discharge">Aguardar descarga</string>
    <string name="text_odometer_register">Registrar odômetro</string>
    <string name="text_travel_type">Tipo de viagem</string>
    <string name="text_undefined">Indefinida</string>
    <string name="text_defined">Definida</string>
    <string name="text_travel_code_reading">Leitura do código da viagem</string>
    <string name="text_manual">Manual</string>
    <string name="text_platform_measure">Medida na plataforma</string>
    <string name="text_weight">Peso</string>
    <string name="text_volume">Volume</string>
    <string name="text_milk_density">Densidade do leite</string>
    <string name="text_default">Padrão</string>
    <string name="text_measured">Medida</string>
    <string name="text_yes">Sim</string>
    <string name="text_no">Não</string>
    <string name="text_canceled_collections">Coletas canceladas</string>
    <string name="text_file_layout">Layout do arquivo</string>
    <string name="text_complete">Completo</string>
    <string name="text_summed_up">Resumido</string>
    <string name="text_file">Arquivo</string>
    <string name="text_off_line">Off-line</string>
    <string name="text_user_printer">Utilizar impressora</string>
    <string name="text_bluetooth_printer">Impressora bluetooth</string>
    <string name="text_grant_permission">Conceder permissões</string>
    <string name="text_print_cancelled_collections">Imprimir coletas canceladas</string>
    <string name="text_printer_layout">Layout de impressão</string>
    <string name="text_collective_tank_collection">Coleta de tanque coletivo</string>
    <string name="text_typed">Digitado</string>
    <string name="text_photo">Foto</string>
    <string name="text_typed_photo">Digitado + foto</string>
    <string name="text_data_print">Dados para impressão</string>
    <string name="text_scale">Régua</string>
    <string name="text_sample">Amostra</string>
    <string name="text_temperature">Temperatura</string>
    <string name="text_occurrence">Ocorrência</string>
    <string name="text_alizarol">Alizarol</string>
    <string name="text_duplicate_receipt">Segunda via do recibo</string>
    <string name="text_ever">Sempre</string>
    <string name="text_optional">Opcional</string>
    <string name="text_disabled_bluetooth">Bluetooth desativado</string>
    <string name="text_drivers">Motoristas</string>
    <string name="text_occurrences">Ocorrências</string>
    <string name="text_producers">Produtores</string>
    <string name="text_routes">Rotas</string>
    <string name="text_vehicles">Veículos</string>
    <string name="text_sync">Sincronizar</string>
    <string name="text_last_sync_colon">Última sincronização:</string>
    <string name="text_producer_type_colon">Tipo de produtor: %1s</string>
    <string name="text_tank_code_colon">Código do tanque: %1s</string>
    <string name="text_route_producers_colon">Produtores na rota: %1d</string>
    <string name="text_code_name_producer">Código ou nome do produtor</string>
    <string name="text_individual">Individual</string>
    <string name="text_associate">Associado</string>
    <string name="text_collective">Coletivo</string>
    <string name="text_code_name_driver">Código ou nome do motorista</string>


    <string name="msg_update_registers">Atualizando cadastros</string>
    <string name="msg_error_file_value_unexpected">Há um valor inesperado nos registros de \"%1s\"</string>
    <string name="msg_description_travel">Configurações relacionadas a viagem.</string>
    <string name="msg_description_FTP">Configurações relacionadas ao FTP.</string>
    <string name="msg_description_web_service">Configurações relacionadas ao Web Service.</string>
    <string name="msg_description_application">Configurações relacionadas ao aplicativo.</string>
    <string name="msg_description_printer">Configurações relacionadas a impressora bluetooth.</string>
    <string name="msg_incorrect_username_password">Usuário ou senha incorreto</string>
    <string name="msg_first_register">Primeiro registre o aplicativo.</string>
    <string name="msg_necessary_choosen_operation_type">Escolha um tipo de operação.\nIsso será necessário apenas essa vez.</string>
    <string name="msg_description_collect">Configurações relacionadas a coleta.</string>
    <string name="msg_value_greater_zero">Valor deve ser maior que 0.</string>
    <string name="msg_value_greater_hundred">Valor maior que 100.</string>
    <string name="msg_testing_ftp">Testando a conexão com o FTP</string>
    <string name="msg_testing_ws">Testando conexão com o servidor</string>
    <string name="msg_connect_ftp_failed">Falha de conexão com o FTP</string>
    <string name="msg_autentication_ftp_failed">Falha na autenticação do FTP</string>
    <string name="msg_description_file">Configurações relacionadas aos arquivos de exportação de coletas gerados pelo aplicativo.</string>
    <string name="msg_grant_permission">Precisamos das seguintes permissões para que o aplicativo funcione como o esperado.</string>
    <string name="msg_network_connect">Conecte o smartphone a internet primeiro.</string>
    <string name="msg_not_sync">Não sincronizado</string>
    <string name="msg_operation_type_not_configured">Você ainda não configurou o tipo de operação do aplicativo.\nVá ao menu Configurações > Aplicativo.</string>
    <string name="msg_sync_failure">Não foi possível atualizar os cadastros.</string>
    <string name="msg_sync_success">Os cadastros foram atualizados.</string>
    <string name="msg_register_ftp">Cadastre os dados de acesso ao FTP antes de sincronizar.</string>
    <string name="msg_no_registration_registers">Não há cadastros de %1s</string>


    <!-- Settings -->
    <string name="msg_printer_not_working">Não foi possível realizar o teste de impressão.</string>
    <string name="msg_printer_working">Teste de impressão realizado com sucesso.</string>
    <string name="msg_printer_not_paired">A impressora escolhida não está pareada.</string>
    <string name="msg_test_printer">Verificar se a impressora bluetooth está funcionando?</string>
    <string name="msg_printer_not_paread">Não há nenhum dispositivo bluetooth pareado.</string>
    <string name="msg_printer_bluetooth_off">O bluetooth está desativado.</string>
    <string name="text_settings_saved">As configurações foram salvas</string>
    <string name="msg_ftp_working">A conexão com o FTP está funcionando.</string>
    <string name="msg_ftp_not_working">A conexão com o FTP não está funcionando.</string>
    <string name="msg_printer_testing">Testando a impressora</string>
    <string name="msg_test_ftp">Verificar se a conexão com o FTP está funcionando?</string>
    <string name="msg_test_ws">Verificar se a conexão com o Web Service está funcionando?</string>
    <string name="msg_active_bluetooth">Ative o bluetooth do smartphone para utilizar a impressora.</string>
    <string name="msg_click_view_register">Clique para visualizar os cadastros.</string>


    <!-- Printer -->
    <string name="text_printer_working">IMPRESSORA OK</string>


    <!-- Organize -->
    <string name="text_code_description_occurrence">Código ou descrição da ocorrência</string>
    <string name="text_not_collect">Não coleta</string>
    <string name="text_code_plate_vehicle">Código ou placa do veículo</string>
    <string name="text_compartment">Compartimento</string>
    <string name="text_capacity">Capacidade (L)</string>
    <string name="text_code_name_route">Código ou nome da rota</string>
    <string name="msg_select_printer">Selecione uma impressora</string>

</resources>