<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.settings.travel.SettingsTravelActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView style="@style/Theme.DIGIcerto.CardView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_producer_code_reading"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_read_producer_code" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_select_wildcard_producer"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wildcard_producer" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_transhipment"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_transhipment" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_await_discharge"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_await_discharge" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/Theme.DIGIcerto.CardView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_travel_type" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_travel_defined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/text_defined" />

                    <RadioButton
                        android:id="@+id/radio_travel_undefined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_undefined" />

                </RadioGroup>

                <View style="@style/Theme.DIGIcerto.ViewSeparator" />

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_milk_density" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_milk_density_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/text_default" />

                    <RadioButton
                        android:id="@+id/radio_milk_density_measured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_measured" />

                </RadioGroup>

                <View style="@style/Theme.DIGIcerto.ViewSeparator" />

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_platform_measure" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_platform_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ignore" />

                    <RadioButton
                        android:id="@+id/radio_platform_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_weight" />

                    <RadioButton
                        android:id="@+id/radio_platform_volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_volume" />

                </RadioGroup>

                <View style="@style/Theme.DIGIcerto.ViewSeparator" />

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_travel_code_reading" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_travel_code_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ignore" />

                    <RadioButton
                        android:id="@+id/radio_travel_code_read_barcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_read_barcode" />

                    <RadioButton
                        android:id="@+id/radio_travel_code_manual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_manual" />

                </RadioGroup>

                <View style="@style/Theme.DIGIcerto.ViewSeparator" />

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_odometer_register" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_odometer_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ignore" />

                    <RadioButton
                        android:id="@+id/radio_odometer_typed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_typed" />

                    <RadioButton
                        android:id="@+id/radio_odometer_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_photo" />

                    <RadioButton
                        android:id="@+id/radio_odometer_typed_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_typed_photo" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>