<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.collect.SettingsCollectActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView style="@style/Theme.DIGIcerto.CardView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_production_tolerance_percentage"
                    style="@style/Theme.DIGIcerto.TextInputFilled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_avg_production_tolerance"
                    app:prefixText="%">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_production_tolerance_percentage"
                        style="@style/Theme.DIGIcerto.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/Theme.DIGIcerto.CardView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_acid_milk"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_acid_milk" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_temperature_picture"
                    style="@style/Theme.DIGIcerto.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_temperature_picture" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/Theme.DIGIcerto.CardView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_collective_tank_collection" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_collective_tank_typed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_typed" />

                    <RadioButton
                        android:id="@+id/radio_collective_tank_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_photo" />

                    <RadioButton
                        android:id="@+id/radio_collective_tank_typed_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_typed_photo" />

                </RadioGroup>

                <View style="@style/Theme.DIGIcerto.ViewSeparator" />

                <TextView
                    style="@style/Theme.DIGIcerto.Label"
                    android:text="@string/text_register_sample" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_sample_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ignore" />

                    <RadioButton
                        android:id="@+id/radio_sample_producer_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_producer_code" />

                    <RadioButton
                        android:id="@+id/radio_sample_aleatory_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_aleatory_code" />

                    <RadioButton
                        android:id="@+id/radio_sample_read_barcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_read_barcode" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>